# webgpu-native-dawn-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glfw3webgpu/: README.md
imgui/: YOU_SHOULD_DOWNLOAD_IMGUI_HERE
include/stb/: stb_image.h
resources/shaders/: base_position_uv.wgsl  bindings.h.wgsl  compute_hello_world.wgsl  cube.wgsl  debug_depth.wgsl  debug_shadow.wgsl  debug_window.wgsl  lights.h.wgsl  mainshader.h.wgsl  picker.wgsl  position.wgsl  position_normal.wgsl  ray_tracing_aabb.wgsl  ray_tracing_funcs.wgsl  ray_tracing_material_color.wgsl  ray_tracing_quad_funcs.wgsl  ray_tracing_simple.wgsl  ray_tracing_sphere_funcs.wgsl  ray_tracing_struct.wgsl  shadow.h.wgsl  shadow_map_csm.wgsl  single_geo_color_sample.wgsl  structs.h.wgsl  triangle.wgsl  vertex_base.wgsl  vertex_base_fs.h.wgsl  vertex_base_vs.h.wgsl
src/: Application.cpp  Application.h  ComputeConsoleApplication.cpp  ComputeConsoleApplication.h  Controls.h  Gizmo.cpp  Gizmo.h  GizmoTest.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneRender.cpp  SceneRender.h  SceneUI.h  UI.cpp  UI.h
src/base/: BaseObject.h  Constants.h  Indexes.h  TransformObject.cpp  TransformObject.h  Vertex.cpp  Vertex.h  Vertices.cpp  Vertices.h
src/camera/: Camera.cpp  Camera.h
src/canvas/: RayCanvasSimple.cpp  RayCanvasSimple.h  ScreenCanvas.cpp  ScreenCanvas.h
src/data/: Canvas.h  Cube.h  SampleTexture.h
src/debug/: DebugDepth.h  DebugShadow.h  DebugWindow.h
src/enums/: BindGroupType.h  ObjectType.h  TextureType.h
src/geometry/: Geometry.h  GeometryCreator.h
webgpu/: webgpu.cmake
(+146 files in other folders)
